--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -576,6 +576,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     color: #E95A29;
 }
 
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+}
+
 .absoluteMessageArea {
     position: fixed;
     z-index: 100;
@@ -584,6 +588,12 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 .fixMessageBlockBtn, .fixErrorMessageBlockBtn, .fixSuccessMessageBlockBtn {
     float: right;
     background-color: #FFFFFF;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
 
 /*ERROR OR WARNING MESSAGES*/
