--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -561,6 +561,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
+	border: 1px solid #56871B !important;
     border-color: #56871B;
 }
 
@@ -569,6 +570,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
+	border: 1px solid #E95A29 !important; 
     border-color: #E95A29;
 }
 
