Former-commit-id: 4f0b2d3d7210bae9e741577bfea3461bda058a50

--- a/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
@@ -34,7 +34,7 @@
 		<f:loadBundle var="tip" basename="Tooltip"/>
 
 <!-- TODO: Exchange this with lastsubmitted feed -->
-<h:panelGroup rendered="#{ApplicationBean.checkSystemTypeProduction}">
+<h:panelGroup>
     
 
     <h2>
@@ -67,9 +67,11 @@
     	</div>
     </div>
 </h:panelGroup>
+<!-- 
 <h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
     <h:outputText value="#{lbl.Home_Header_LastItems_Disabled}"/><br/>
 </h:panelGroup>
+-->
 
 
 
