--- a/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/BlogIntegration.jspf
@@ -32,7 +32,7 @@
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 		<f:loadBundle var="lbl" basename="Label"/>
 
-<h:panelGroup rendered="#{ApplicationBean.checkSystemTypeProduction}">
+<h:panelGroup>
     <script src="http://www.google.com/jsapi" type="text/javascript">&#160;</script> 
     <script type="text/javascript">
     google.load("feeds", "1");
@@ -54,7 +54,8 @@
 	<div id="feedControl" style="font-size: 0.4em"></div>
 </h:panelGroup>
  
+ <!-- 
 <h:panelGroup rendered="#{!ApplicationBean.checkSystemTypeProduction}">
     <h:outputText value="#{lbl.Home_Header_News_Disabled}"/>
 </h:panelGroup>
-
+-->
