Former-commit-id: 98e22fe13e1bd62ba70bc3c3580a7a6745be271b

--- a/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/LastReleased.jspf
@@ -52,7 +52,7 @@
     						<div class="gfc-result">
 								<div class="gf-result">
 									<div class="gf-title">
-										<h:outputLink value="#{item.linkLatestRelease }" styleClass="gf-title"><h:outputText value="#{item.metadata.title}"/></h:outputLink>
+										<h:outputLink value="#{item.linkLatestRelease }" styleClass="gf-title"><h:outputText value="#{item.metadata.title.value}" converter="HTMLSubSupConverter" escape="false"/></h:outputLink>
 									</div>
 									<div class="gf-author"><h:outputText value="#{item.creatorsShort}"/></div>
 									<div class="gf-spacer">-</div>
