--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -593,7 +593,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
-    border-color: #548E00;
+	border: 1px solid #56871B !important;
+    border-color: #56871B;
 }
 
 .infoMessageArea h2 {
@@ -601,7 +602,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
-    border-color: #D80000;
+	border: 1px solid #E95A29 !important; 
+    border-color: #E95A29;
 }
 
 .errorMessageArea h2 {
@@ -638,4 +640,16 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 /*UNDER REWORK*/
 .underRework {
     background-color: #F43E71 !important;
+}
+
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
