--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/images.css
@@ -44,6 +44,10 @@ body .wrapper {
 	background-repeat:no-repeat !important;
 }
 
+.headerLogo, .themePark {
+    visibility: hidden;
+}
+
 /*HEADER
  -----------------------------------------------
  |[ Logo ]                 [      Meta Menu   ]|
@@ -61,34 +65,6 @@ body .wrapper {
 @media print { .contentMenu {list-style-image:
         url('../../../globalImages/logo.png');
 }
-}
-
-.themePark {
-    /*	background: inherit; */
-    /*	background-image: url('../images/logo_overlay_beta.png');*/
-    background-repeat: no-repeat;
-    background-position: top left;
-}
-
-.overlayDev {
-    background: inherit;
-    background-image: url('../images/logo_pubman_overlay_dev.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.overlayTest {
-    background: inherit;
-    background-image: url('../images/logo_pubman_overlay_test.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.overlayQA {
-    background: inherit;
-    background-image: url('../images/logo_pubman_overlay_qa.png');
-    background-repeat: no-repeat;
-    background-position: center center;
 }
 
 .smallThrobber {
@@ -431,7 +407,7 @@ body .wrapper {
     background-position: center center;
 }
 
-.mpgUnit {
+.mpgUnit, .affTreeOUIcon {
     background-image: url('../images/mnrv_23x23.png');
     background-repeat: no-repeat;
     background-position: center center;
