--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/extPaginator.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/extPaginator.css
@@ -124,21 +124,19 @@
 	}
 	
 @media print {
-	.pageBrowser input, .pageBrowser .seperator, .pageBrowser .actualSeperator {
+	.pageBrowser button {
+		background-color: #FFFFFF !important;
 		display: none;
-	}
-	
-	.pageBrowser {
-		margin-left: 400px !important;
 	}
 	
 	.pageBrowser .pageLabel {
 		display: block !important;
 	}
 	
-	.pageBrowser input.actual {
+	.pageBrowser button.actual {
 		display: block;
-		border-width: 0px;
+		border-width: 1px;
+		text-decoration: underline !important;
 	}
 }
 
