Media print layout fixed

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
@@ -34,6 +34,9 @@
 	.header {
 		display: none;
 	}
+	.headerSection .headLine h1, .headerSection .headLine {
+			float: none;
+	}
 }
 
 /*META MENU*/
