PUBMAN-1860 fixed: Sharing of restricted files is not possible
Former-commit-id: d745e546f8cd29528ae95f53d23da3ad2a9af70c

--- a/pubman/pubman_presentation/src/main/webapp/audience/Audience.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/audience/Audience.jspf
@@ -52,9 +52,9 @@
 						<h:outputText value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
 					</b>
 					<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-						<h:selectOneMenu id="selUserGroups" styleClass="quad_select" value="#{grantForAllFiles.grant.grantedTo}">
+						<tr:selectOneChoice simple="true" id="selUserGroups" styleClass="quad_select" value="#{grantForAllFiles.grant.grantedTo}">
 							<f:selectItems value="#{AudienceBean.userGroups}" />
-						</h:selectOneMenu>
+						</tr:selectOneChoice>
 					</h:panelGroup>
 					<h:panelGroup styleClass="large_area0_p8 lineToolSection" >
 						<tr:commandButton id="btnAddGrantForAllFiles" action="#{AudienceBean.addGrantForAllFiles}" styleClass="min_imgBtn groupTool add" text=" " />
@@ -85,9 +85,9 @@
 								<h:outputText value="#{lbl.AudiencePage_audiencingGroup}" /><span class="noDisplay"> </span>
 							</b>
 							<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
-								<h:selectOneMenu id="selUserGroups" styleClass="quad_select" value="#{grant.grant.grantedTo}">
+								<tr:selectOneChoice id="selUserGroups" styleClass="quad_select" value="#{grant.grant.grantedTo}">
 									<f:selectItems value="#{AudienceBean.userGroups}" />
-								</h:selectOneMenu>
+								</tr:selectOneChoice>
 							</h:panelGroup>
 							<h:panelGroup styleClass="large_area0_p8 lineToolSection">
 								<tr:commandButton id="btnAddGrant" action="#{file.addGrant}" styleClass="min_imgBtn groupTool add" text=" " />
