--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
@@ -163,6 +163,10 @@
 		margin-bottom: -0.56em;
 	}
 
+	/*Force IE7 top-margin*/
+
+*+html .breadcrumb { margin-top: 1em; }
+
 	.breadcrumb ol {
 		list-style: none;
 		margin: 0px;
