--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
@@ -40,6 +40,7 @@
 }
 
 /*META MENU*/
+
 	.metaMenu {
 		height: 2.73em;
 		line-height: normal;
@@ -154,6 +155,12 @@
 		margin-bottom: 0.46em;
 	}
 
+	/*Force IE7 top-margin*/
+
+	*+html .header {
+		margin-bottom: 1em;
+	}
+
 /*BREADCRUMB*/
 
 	.breadcrumb {
@@ -162,10 +169,6 @@
 		overflow: hidden;
 		margin-bottom: -0.56em;
 	}
-
-	/*Force IE7 top-margin*/
-
-*+html .breadcrumb { margin-top: 1em; }
 
 	.breadcrumb ol {
 		list-style: none;
