--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Gradient/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Gradient/styles/appearance.css
@@ -602,18 +602,21 @@ input[type = text], textarea {
 		background-color: #FFFFFF;
 		margin-bottom: 1em;
 	}
-	
+
 	.infoMessageArea {
-		border-color: #56871B;
+		border: 1px solid #56871B !important;
+	    border-color: #56871B;
 	}
-	
+
 	.infoMessageArea h2 {
 		color: #56871B;
 	}
 	
 	.errorMessageArea {
-		border-color: #E95A29;
+		border: 1px solid #E95A29 !important; 
+	    border-color: #E95A29;
 	}
+
 	
 	.errorMessageArea h2 {
 		color: #E95A29;
@@ -649,4 +652,15 @@ input[type = text], textarea {
 
 .underRework {
 	background-color: #F43E71 !important;
+}
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
