--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Green/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Green/styles/appearance.css
@@ -577,7 +577,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
-    border-color: #50D619;
+	border: 1px solid #56871B !important;
+    border-color: #56871B;
 }
 
 .infoMessageArea h2 {
@@ -585,7 +586,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
-    border-color: #FF7F00;
+	border: 1px solid #E95A29 !important; 
+    border-color: #E95A29;
 }
 
 .errorMessageArea h2 {
@@ -622,4 +624,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 /*UNDER REWORK*/
 .underRework {
     background-color: #F43E71 !important;
+}
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
