--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG2/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG2/styles/appearance.css
@@ -586,7 +586,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
-    border-color: #00A992;
+	border: 1px solid #56871B !important;
+    border-color: #56871B;
 }
 
 .infoMessageArea h2 {
@@ -594,7 +595,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
-    border-color: #BE0031;
+	border: 1px solid #E95A29 !important; 
+    border-color: #E95A29;
 }
 
 .errorMessageArea h2 {
@@ -631,4 +633,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 /*UNDER REWORK*/
 .underRework {
     background-color: #F43E71 !important;
+}
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
