--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
@@ -603,7 +603,8 @@ input[type = text], textarea {
 	}
 	
 	.infoMessageArea {
-		border-color: #56871B;
+		border: 1px solid #56871B !important;
+    	border-color: #56871B;
 	}
 	
 	.infoMessageArea h2 {
@@ -611,7 +612,8 @@ input[type = text], textarea {
 	}
 	
 	.errorMessageArea {
-		border-color: #E95A29;
+		border: 1px solid #E95A29 !important; 
+	    border-color: #E95A29;
 	}
 	
 	.errorMessageArea h2 {
@@ -648,4 +650,15 @@ input[type = text], textarea {
 
 .underRework {
 	background-color: #F43E71 !important;
+}
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
