--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_NIMS/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_NIMS/styles/appearance.css
@@ -604,6 +604,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
+	border: 1px solid #56871B !important;
     border-color: #56871B;
 }
 
@@ -612,6 +613,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
+	border: 1px solid #E95A29 !important; 
     border-color: #E95A29;
 }
 
@@ -649,4 +651,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 /*UNDER REWORK*/
 .underRework {
     background-color: #F43E71 !important;
+}
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
