--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGreen/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGreen/styles/appearance.css
@@ -569,7 +569,8 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .infoMessageArea {
-    border-color: #FF7F00;
+	border: 1px solid #56871B !important;
+    border-color: #56871B;
 }
 
 .infoMessageArea h2 {
@@ -577,9 +578,9 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 .errorMessageArea {
-    border-color: #FF7F00;
+	border: 1px solid #E95A29 !important; 
+    border-color: #E95A29;
 }
-
 .errorMessageArea h2 {
     color: #FF7F00;
 }
@@ -615,4 +616,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 /*UNDER REWORK*/
 .underRework {
     background-color: #F43E71 !important;
+}
+
+.successMessageArea {
+    border: 1px solid #147DA2 !important;
+    border-color: #147DA2;
+}
+
+.inputInfoBox, .inputInfoBox a {
+	text-align: center;
+	font-weight: bolder;
+	font-family: serif;
 }
