--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/appearance.css
@@ -650,4 +650,6 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	text-align: center;
 	font-weight: bolder;
 	font-family: serif;
+	border-left-width: 2px !important;
+	border-right-width: 2px !important;
 }
