--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
@@ -661,4 +661,6 @@ input[type = text], textarea {
 	text-align: center;
 	font-weight: bolder;
 	font-family: serif;
+	border-left-width: 2px !important;
+	border-right-width: 2px !important;
 }
