Implementation of survey link
Former-commit-id: b9f91ccc68f3afae6c87a5643664fee4edc732fb

--- a/pubman/pubman_presentation/src/main/webapp/header/ui/MetaMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/MetaMenu.jspf
@@ -51,6 +51,15 @@
 	<h:commandLink id="lnkContact" styleClass="medium_area0_p8 endline" title="#{tip.contact}" onclick="loadAbout('#{HomePage.contactUrl}');return false" value="#{lbl.contact}" />
 	<h:panelGroup styleClass="seperator"></h:panelGroup>
 
+
+	<!-- Optional survey link, defined in properties -->
+	<h:panelGroup  rendered="#{HomePage.surveyUrl!=null and not empty HomePage.surveyUrl}">
+		<h:outputLink id="lnkSurvey" target="_blank" styleClass="medium_area0_p8 endline" value="#{HomePage.surveyUrl}">
+			<h:outputText value="#{HomePage.surveyTitle}" title="#{HomePage.surveyTooltip}"/>
+		</h:outputLink>
+		<h:panelGroup styleClass="seperator"></h:panelGroup>
+	</h:panelGroup>
+	
 	<!-- LogIn, LogOut -->
 	<h:commandLink id="lnkLoginLogout" styleClass="medium_area0_p8 endline" action="#{Login.loginLogout}" value="#{LoginHelper.loginLogoutLabel}" immediate="true" />
 	<h:panelGroup styleClass="seperator"></h:panelGroup>
