Implementation of survey link
Former-commit-id: 51ff64f4bc1eb5923517c559bf006cc9bac1e40e

--- a/pubman/pubman_presentation/src/main/webapp/header/ui/MetaMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/MetaMenu.jspf
@@ -54,7 +54,7 @@
 
 	<!-- Optional survey link, defined in properties -->
 	<h:panelGroup  rendered="#{HomePage.surveyUrl!=null and not empty HomePage.surveyUrl}">
-		<h:outputLink id="lnkSurvey" target="_blank" styleClass="medium_area0_p8 endline" value="#{HomePage.surveyUrl}">
+		<h:outputLink id="lnkSurvey" target="_blank" styleClass="medium_area0_p8 endline" value="#{HomePage.surveyUrl}" style="#{HomePage.surveyStyles}">
 			<h:outputText value="#{HomePage.surveyTitle}" title="#{HomePage.surveyTooltip}"/>
 		</h:outputLink>
 		<h:panelGroup styleClass="seperator"></h:panelGroup>
