--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/images.css
@@ -35,6 +35,10 @@
  
 /*Body Background (none)*/
 
+body {
+	background: url("../images/xmas_web_background.jpg") repeat-x scroll left top;
+}
+
 /*HEADER
  -----------------------------------------------
  |[ Logo ]                 [      Meta Menu   ]|
