--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -101,7 +101,7 @@ h1, h4, h5 {
  */
 /*GENERAL*/
 body {
-    background-color: #FFFFFF;
+     background-color: #EAF4F7;
     color: #343434;
     line-height: 145%;
 }
