--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG_V3/styles/images.css
@@ -40,7 +40,7 @@ body {
 }
 
 body .wrapper {
-	background-image:url("../images/all_header_and_logo.png ");
+	background-image:url("../images/all_header_and_logo.jpg");
 	background-repeat:no-repeat !important;
 }
 
