--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -103,7 +103,7 @@ h1, h4, h5 {
  */
 /*GENERAL*/
 body {
-    background-color: #EAF4F7;
+    background-color: #ebf5f7 !important;
     color: #524240;
     line-height: 145%;
 }
