Added label for iso639-3 browse by
Former-commit-id: 28ab704aecb463406cc74a433bd071670fcb2967

--- a/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByStart.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/browseBy/BrowseByStart.jspf
@@ -116,6 +116,9 @@
 				<h:panelGroup rendered="#{subjectVocab == 'mpipks'}">
 					<h:outputText value="#{lbl.mpipksDesc}" />
 				</h:panelGroup>
+				<h:panelGroup rendered="#{subjectVocab == 'iso639-3'}">
+					<h:outputText value="#{lbl.iso6393Desc}" />
+				</h:panelGroup>
 			</div>			
 		</tr:iterator>
 	</div>
